<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Metadata -->

	<!-- Manifest -->
	<string name="app_name">PokéDEX</string>
	<string name="app_description">Search and find information about any Pokémon.</string>

	<!-- Main activity -->
	<string name="description_splash_fg">Closed Pokédex</string>
	<string name="description_splash_bg">Background pattern filled with the starter Pokémons (Charmander, Squirtle and Bulbasaur)</string>

	<!-- Navigation -->
	<string name="label_login">PokéDEX - Login</string>
	<string name="label_signup">PokéDEX - Sign Up</string>
	<string name="label_list">PokéDEX - List</string>

	<!-- UI -->

	<!-- Auth -->
	<string name="alternative">or</string>

	<!-- Login -->
	<string name="hint_username">Username</string>
	<string name="hint_password">Password</string>
	<string name="action_login">Login</string>
	<string name="nav_login">I don\'t have an account</string>
	<string name="err_username">The username MUST be composed of 1 or more alphanumeric characters</string>
	<string name="err_password">The password MUST be composed of 4 or more characters</string>
	<string name="err_repeat">The passwords MUST coincide</string>
	<string name="wait_login">Logging in</string>
	<string name="err_parse">The response could not be parsed (understood)</string>
	<string name="err_invalid">The request could not be parsed by the server (understood)</string>
	<string name="ok_login">The server accepted the login request</string>
	<string name="err_login">Username and password pair could not be found</string>

	<!-- Sign up -->
	<string name="hint_email">Email</string>
	<string name="hint_repeat_password">Repeat password</string>
	<string name="action_signup">Sign up</string>
	<string name="nav_signup">I have an account</string>
	<string name="err_email">The email MUST be valid</string>
	<string name="wait_signup">Signing up</string>
	<string name="ok_signup">The server accepted the sign-up request</string>
	<string name="err_signup">The username already exists</string>

	<!-- List -->
	<string name="description_icon">The Pokémon icon</string>

	<!-- Details -->
	<string name="stat_health">Health</string>
	<string name="stat_attack">Attack</string>
	<string name="stat_defense">Defense</string>
	<string name="stat_special_attack">Special\nattack</string>
	<string name="stat_special_defense">Special\ndefense</string>
	<string name="stat_speed">Speed</string>
	<string name="stat_types">Types</string>
	<string name="stat_height">Height</string>
	<string name="stat_weight">Weight</string>
	<string name="stat_abilities">Abilities</string>
	<string name="stat_items">Items</string>
	<string name="stat_movements">Moves</string>
	<string name="unavailable">-</string>

</resources>
