<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:id="@+id/nav_graph"
			app:startDestination="@id/login_fragment">

	<!-- The list activity -->
	<activity
		android:id="@+id/list_activity"
		android:name="org.egasato.pokedex.app.PokeListActivity"
		android:label="@string/label_list"
		tools:layout="@layout/list_activity" />
	<action android:id="@+id/switch_to_list" app:destination="@id/list_activity" />

	<!-- The login fragment -->
	<fragment
		android:id="@+id/login_fragment"
		android:name="org.egasato.pokedex.app.PokeLoginFragment"
		android:label="@string/label_login"
		tools:layout="@layout/login_fragment">
		<action
			android:id="@+id/switch_to_signup"
			app:destination="@id/signup_fragment"
			app:enterAnim="@anim/slide_in_right"
			app:exitAnim="@anim/slide_out_left"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/slide_in_left"
			app:popExitAnim="@anim/slide_out_right"
			app:popUpTo="@id/nav_graph"
			app:popUpToInclusive="true" />
	</fragment>

	<!-- The register fragment -->
	<fragment
		android:id="@+id/signup_fragment"
		android:label="@string/label_signup"
		tools:layout="@layout/signup_fragment">
		<action
			android:id="@+id/switch_to_login"
			app:destination="@id/login_fragment"
			app:enterAnim="@anim/slide_in_left"
			app:exitAnim="@anim/slide_out_right"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/slide_in_right"
			app:popExitAnim="@anim/slide_out_left"
			app:popUpTo="@id/nav_graph"
			app:popUpToInclusive="true" />
	</fragment>

</navigation>
